# BITSMLOPSAssignment

./: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sample_request.json
.github/workflows/: ci.yml
data/: README.md
data/processed/: heart_disease_clean.csv
helm/heart-disease-api/: Chart.yaml  values.yaml
helm/heart-disease-api/templates/: deployment.yaml  service.yaml
k8s/: deployment.yaml  service.yaml
models/: model.pkl  model_metadata.json
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  heart_api_dashboard.json
monitoring/grafana/provisioning/datasources/: datasource.yml
notebooks/: 01_eda.ipynb
reports/: Heart_Disease_MLOps_Report.docx  Heart_Disease_MLOps_Report_FINAL.docx  REPORT.md  ~$art_Disease_MLOps_Report_DRAFT.docx
reports/screenshots/: README.md  manifest.json
scripts/: _extract_screenshots.py  build_report_docx.py  mlflow_ui.py
scripts/_mlflow_shim/: sitecustomize.py
src/: __init__.py  config.py
src/api/: main.py  schemas.py
src/data/: download.py  eda.py  preprocess.py
src/features/: pipeline.py
src/models/: evaluate.py  train.py
src/utils/: architecture.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py
