[project]
name = "heart-disease-mlops"
version = "1.0.0"
description = "End-to-end MLOps pipeline for heart-disease risk prediction"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
pythonpath = ["."]
filterwarnings = [
    # Silence a third-party deprecation from Starlette's TestClient (it prefers
    # httpx2 in a future release). Not our code; nothing actionable on our side.
    "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.coverage.run]
source = ["src"]
omit = ["src/data/download.py"]
